# mod4play

./: m4p.c  m4p.h  meson.build  meson_options.txt
example/: m4player-sapp.c  meson.build
